# seiscomp-programming-templates

./: CMakeLists.txt
amplitude-pga/: plugin.cpp
filter-simple/: CMakeLists.txt  README.md  plugin.cpp
qcping/: portlist.conf  qcping.py
scevent-score/: plugin.cpp
traveltime-infra/: CMakeLists.txt  README.md  plugin.cpp
traveltime-infra/descriptions/: tmpltttidcinfra.xml
