SC_BEGIN_PACKAGE(FILTER_SIMPLE_TEMPLATE)

SET(SEISCOMP_BASE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/base/common)
SET(SEISCOMP_BASE_BINARY_DIR ${CMAKE_BINARY_DIR}/src/base/common)
SET(SEISCOMP_MAIN_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/base/main)
SET(SEISCOMP_MAIN_BINARY_DIR ${CMAKE_BINARY_DIR}/src/base/main)

SET(
	SCORE_SOURCES
		plugin.cpp
)

INCLUDE_DIRECTORIES(${SEISCOMP_BASE_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${SEISCOMP_BASE_BINARY_DIR}/libs)

SC_ADD_PLUGIN_LIBRARY(SCORE tmplfilter "")
SC_LINK_LIBRARIES_INTERNAL(tmplfilter core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
