SC_BEGIN_PACKAGE(EXAMPLES_TRAVELTIME_INFRA_TEMPLATE)

SET(SEISCOMP_BASE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/base/common)
SET(SEISCOMP_BASE_BINARY_DIR ${CMAKE_BINARY_DIR}/src/base/common)
SET(SEISCOMP_MAIN_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/base/main)
SET(SEISCOMP_MAIN_BINARY_DIR ${CMAKE_BINARY_DIR}/src/base/main)

SET(
	TT_INFRA_SOURCES
		plugin.cpp
)

INCLUDE_DIRECTORIES(${SEISCOMP_BASE_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${SEISCOMP_BASE_BINARY_DIR}/libs)

SC_ADD_PLUGIN_LIBRARY(TT_INFRA tmpltttidcinfra "")

target_sources(tmpltttidcinfra
  PRIVATE
    descriptions/tmpltttidcinfra.xml
)
SC_LINK_LIBRARIES_INTERNAL(tmpltttidcinfra core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
